2009-12-21  Alan Modra  <amodra@gmail.com>

	* MAINTAINERS: Update my email address.

2009-12-18  Ulrich Weigand  <uweigand@de.ibm.com>

	* readelf.c (get_note_type): Handle NT_S390_HIGH_GPRS notes.

2009-12-11  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* ar.c: Fix shadowed variable warnings.
	* bucomm.c: Likewise.
	* coffgrok.c: Likewise.
	* configure: Likewise.
	* dlltool.c: Likewise.
	* dllwrap.c: Likewise.
	* dwarf.c: Likewise.
	* ieee.c: Likewise.
	* nlmconv.c: Likewise.
	* nm.c: Likewise.
	* objcopy.c: Likewise.
	* objdump.c: Likewise.
	* prdbg.c: Likewise.
	* readelf.c: Likewise.
	* resbin.c: Likewise.
	* resrc.c: Likewise.
	* resres.c: Likewise.
	* srconv.c: Likewise.
	* stabs.c: Likewise.
	* sysdump.c: Likewise.
	* sysinfo.y: Likewise.
	* wrstabs.c: Likewise.

2009-12-10  Tristan Gingold  <gingold@adacore.com>

	* addr2line.c (pretty_print): New variable.
	(long_options): Add an entry for -p/--pretty-print.
	(usage): Document -p/--pretty-print.
	(translate_addresses): Handle pretty_print.  Reindent.
	(main): Handle option -p.
	* doc/binutils.texi (addr2line): Document -p/--pretty-print.
	* NEWS: Mention new feature.

2009-12-09  Tristan Gingold  <gingold@adacore.com>

	* addr2line.c (translate_addresses): Display addresses
	if option -a is used.
	(with_addresses): New variable.
	(long_options): Add option '-a'.
	(usage): Add usage for option '-a'.
	(main): Handle option '-a'.
	* doc/binutils.texi (addr2line): Document option '-a'.
	* NEWS: Mention new feature.

2009-12-08  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (dwarf_select_sections_by_names): Handle pubtypes correctly.
	(debug_displays): Remove duplicate entry for debug_pubtypes.

2009-12-03  David Daney  <ddaney@caviumnetworks.com>
	    Adam Nemet  <adambnemet@gmail.com>

	* readelf.c (get_machine_flags): Handle E_MIPS_MACH_OCTEON2 case.

2009-12-03  Nick Clifton  <nickc@redhat.com>

	PR binutils/11045